--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -13,7 +13,7 @@
         <h3>Ingredients</h3>
         <dl>
             <dt>Butter</dt>
-            <dd>Both salted and non-salted butter can be used. In case you use non-salted butter, add 1 teaspoon of salt to the flour.</dd>
+            <dd>Both salted and non-salted butter can be used. In case you use non-salted butter, add half a teaspoon of salt to the flour.</dd>
             <dt>Sugar</dt>
             <dd>As brown sugar is naturally moist, using it will result in a softer and moister cake. White sugar, on the othe hand, will result in a slightly lighter-coloured and drier cake.</dd>
             <dd>I tend to just use whatever I have in my pantry though as the flavour differences are negligible, but prefer brown sugar.</dd>
@@ -29,13 +29,13 @@
         <ul>
             <li>150g brown sugar</li>
             <li>100ml whole milk</li>
-            <li>150g salted butter (diced)</li>
+            <li>150g salted butter, diced</li>
             <li>100g self-raising flour</li>
             <li>50g cocoa powder</li>
-            <li>1/2 tsp baking soda</li>         
-            <li>2 eggs (lightly beaten)</li>
-            <li>2 tsp vanilla extract</li>
-            <li>3 tbsp vegetable oil </li>
+            <li>1/2 teaspoon baking soda</li>         
+            <li>2 eggs, lightly beaten</li>
+            <li>2 teaspoons vanilla extract</li>
+            <li>3 tablespoons vegetable oil </li>
         </ul>
 
         <h3>Instructions</h3>
