--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/cake.html">Moist Chocolate Cake</a>
+    <img src="img/cake.jpg">
+    <a href="./recipes/waffles.html">Waffles</a>
+    <img src="img/waffles.jpg">
 </body>
 
 </html>
