--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -8,7 +8,7 @@
     <body>
         <img src="../img/cake.jpg">
         <h2>Moist Chocolate Cake</h2>
-        <p>This chocolate cake might just be the best recipe you will ever stumble upon. Not only is it moist, easy to make, and requires no mixer, but every decadent bite will take you (an anyone who will have the privilege to taste this delight) to chocolate heaven.</p>
+        <p>This chocolate cake might just be the best recipe you will ever stumble upon. Not only is it moist, easy to make, and requires no mixer, but every decadent bite will take you (and anyone who will have the privilege to taste this delight) to chocolate heaven.</p>
         <p>If you are a faint of heart chocolate cake-loving person, it might be better to stay away from this recipe.</p>
         <h3>Ingredients</h3>
         <dl>
@@ -16,13 +16,13 @@
             <dd>Both salted and non-salted butter can be used. In case you use non-salted butter, add half a teaspoon of salt to the flour.</dd>
             <dt>Sugar</dt>
             <dd>As brown sugar is naturally moist, using it will result in a softer and moister cake. White sugar, on the othe hand, will result in a slightly lighter-coloured and drier cake.</dd>
-            <dd>I tend to just use whatever I have in my pantry though as the flavour differences are negligible, but prefer brown sugar.</dd>
+            <dd>I tend to just use whatever I have in my pantry though, as the flavour differences are negligible, but prefer brown sugar.</dd>
             <dt>Flour</dt>
             <dd>This recipe calls for self-raising flour. If you don't have any on hand you can make it yourself by adding 1 1/2 teaspoons of baking powder to 100g of plain flour.</dd>
             <dt>Cocoa Powder</dt>
             <dd>Dutch-processed cocoa powder will lead to a darker cake that tastes more chocolatey. Regular cocoa powder can also be used for this recipe.</dd>
             <dt>Oil</dt>
-            <dd>In order to make the cake moist without having to use too much butter, this recipe calls for oil. Using flavourless vegetable oil, such as canola oil will work well, but you can also play around with different oils to enhance the flavour according to your tastes. I have previously also used olive oil as well as coconut oil and both have pleasantly surprised me.</dd>
+            <dd>In order to make the cake moist without having to use too much butter, this recipe calls for oil. Using flavourless vegetable oil, such as canola oil will work well, but you can also play around with different oils to enhance the flavour according to your taste. I have previously used olive oil as well as coconut oil and both have pleasantly surprised me.</dd>
         </dl>
 
         <h3>Ingredient list</h3>
@@ -42,8 +42,8 @@
         <ol>
             <li>Boil sugar and milk on a low flame until the sugar has melted</li>
             <li>Turn off the heat and add butter, stirring regularly</li>
-            <li>In a large bowl, add flour, cocoa powder and baking soda and whisk to combine</li>
-            <li>Fold the wet mix into the dry mix </li>
+            <li>In a large bowl, add flour, cocoa powder, and baking soda and whisk to combine</li>
+            <li>Fold the wet mix into the dry mixture </li>
             <li>Add eggs, vanilla extract, and oil to the batter</li>
             <li>Pour the batter into a buttered (or oiled) rice cooker pot and bake for 35 to 45 mins or until a toothpick inserted in the middle of the cake comes our clean</li>
             <li>Remove the cake from the rice cooker by placing it upside down on a plate</li>
