--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -16,7 +16,7 @@
             <dd>Both salted and non-salted butter can be used. In case you use non-salted butter, add half a teaspoon of salt to the flour.</dd>
             <dt>Sugar</dt>
             <dd>As brown sugar is naturally moist, using it will result in a softer and moister waffles. White sugar, on the othe hand, will result in a slightly lighter-coloured and drier waffles.</dd>
-            <dd>I tend to just use whatever I have in my pantry though as the flavour differences are negligible, but prefer brown sugar or a mix of brown and white.</dd>
+            <dd>I tend to just use whatever I have in my pantry though, as the flavour differences are negligible, but prefer brown sugar or a mix of brown and white.</dd>
         </dl>
 
         <h3>Ingredient list</h3>
