add image to page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <img src="img/cake.jpg">
     <a href="./recipes/waffles.html">Waffles</a>
     <img src="img/waffles.jpg">
+    <a href="./recipes/moelleux.html">Moelleux au Chocolat</a>
+    <img src="img/moelleux.jpg">
 </body>
 
 </html>
