Fix typos and add alt attribute

--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -6,9 +6,9 @@
     </head>
 
     <body>
-        <img src="../img/cake.jpg">
+        <img src="../img/cake.jpg" alt="an image of a chocolate cake">
         <h2>Moist Chocolate Cake</h2>
-        <p>This chocolate cake might just be the best recipe you will ever stumble upon. Not only is it moist, easy to make, and requires no mixer, but every decadent bite will take you (and anyone who will have the privilege to taste this delight) to chocolate heaven.</p>
+        <p>This chocolate cake might just be the best recipe you will ever stumble upon. Not only is it moist, easy to make, and requires no mixer, but every <em>decadent</em> bite will take you (and anyone who will have the privilege to taste this delight) to chocolate heaven.</p>
         <p>If you are a faint of heart chocolate cake-loving person, it might be better to stay away from this recipe.</p>
         <h3>Ingredients</h3>
         <dl>
