--- a/recipes/moelleux.html
+++ b/recipes/moelleux.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <img src="../img/moelleux.jpg">
+        <img src="../img/moelleux.jpg" alt="an image of a moelleux au chocolat">
         <h2>Moelleux au Chocolat</h2>
         <p>The decadence of this moelleux au chocolat. also known as molten chocolate cake, lies in its simplicity.</p>
         <p>Not only is this recipe easy to make, it is also extremely versatile. You can play around with different types of chocolate (bitter black chocolates to pistachio white ones) as well as add some fruits in the batter before placing it in the oven.</p>
@@ -15,7 +15,7 @@
             <dt>Butter</dt>
             <dd>Both salted and non-salted butter can be used. I would recommend using non-salted butter but still adding a pinch of salt to the batter to add another dimension to the taste.</dd>
             <dt>Sugar</dt>
-            <dd>This recipe calls for powdered sugar, but you can as easily use white sugar. Just beat beat the sugar and eggs until the mixture becomes light yellow to white-ish.</dd>
+            <dd>This recipe calls for powdered sugar, but you can as easily use white sugar. Just beat the sugar and eggs until the mixture becomes light yellow to white-ish.</dd>
         </dl>
 
         <h3>Ingredient list</h3>
