--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <img src="../img/waffles.jpg">
+        <img src="../img/waffles.jpg" alt="an image of waffles">
         <h2>Waffles</h2>
         <p>This easy American-style waffle mix will quickly become one of your go-to breakfasts or snacks.</p>
         <p>It is not only easy to make, but it can also double as a great pancake mix if you don't have a waffle iron on hand.</p>
