--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/cake.html">Moist Chocolate Cake</a>
-    <img src="img/cake.jpg">
+    <img src="img/cake.jpg" alt="image of a chocolate cake">
     <a href="./recipes/waffles.html">Waffles</a>
-    <img src="img/waffles.jpg">
+    <img src="img/waffles.jpg" alt=" image of American waffles">
     <a href="./recipes/moelleux.html">Moelleux au Chocolat</a>
-    <img src="img/moelleux.jpg">
+    <img src="img/moelleux.jpg" alt="image of a moelleux au chocolat">
 </body>
 
 </html>
